blocks/header/header.css
.header-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  margin: 0 auto;
}

.header {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.header #agency-bar {
  width: 100%;
  height: 136px;
}

.header nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  min-width: 100%;
  margin: 25px auto;
}

.header .chin { 
  display: flex;
  flex-direction: column;
  align-items: center;
  color: #fff;
  background-color: var(--dark-background-color);
  padding: 6px 0;
}

.header nav>div {
  display: flex;
  width: 100%;
  align-items: stretch;
  justify-content: space-between;
}

.header .chin>div {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  width: 80%;
}

.header .chin .status {
  font-size: var(--body-font-size-s);
}

.header .chin .search form {
  display: block;
  width: 100%;
}

.header .chin .search input {
  display: inline-block;
  width: 100%;
  padding: 15px;
  text-transform: uppercase;
}

.header nav p {
  margin: 0;
}

.header nav img {
  width: 304px;
  height: 76px;
}

.header nav ul {
  display: none;
  flex-direction: column;
  list-style: none;
  width: 90vw;
  padding: 20px;
  margin: 0;
  font-size: var(--body-font-size-s);
  z-index: 100;
}

.header nav ul.visible {
  display: flex;
  position: absolute;
  top: 250px;
  left: 0;
  background-color: #fff;
}

.header nav ul ul {
  display: none;
  list-style: none;
  z-index: 110;
}

.header nav ul ul.visible {
  display: flex;
  position: relative;
  top: 0;
  background-color: #fff;
}

.header nav li a {
  display: flex;
  position: relative;
  min-width: 100%;
  text-decoration: none;
  color: #163963;
  font-weight: 500;
  letter-spacing: 1px;
  font-style: normal;
}

.header nav li {
  min-height: 47px;
}

.header nav ul ul>li {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.header nav ul ul>li img {
  display: flex;
  width: 32px;
  height: 32px;
}

.header nav ul ul>li a {
  margin-top: 15px;
  padding-left: 15px;
  font-size: var(--heading-font-size-xs);
}

.header nav ul ul>li p {
  display: none;
}

.header nav div>ul>li {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-bottom: 1px solid rgba(0, 0, 0, 3%);
  padding: 0 10px;
}

.header nav li strong {
  position: relative;
  min-width: 100%;
}

.header nav li a.expander::after {
  font-family: ETmodules;
  content: "3";
  font-size: 26px;
  position: absolute;
  right: 10px;
  top: 0;
  font-weight: 800;
}

.header nav li a:hover {
  color: #666;
  transition: all .4s ease-in-out;
}

.header nav .hamburger {
  font-size: 40px;
  width: 50px;
  text-decoration: none;
  color: #000;
  -webkit-tap-highlight-color: transparent;
}

/* Desktop */
@media (min-width: 900px) {
  .header {
    width: 100%;
  }

  .header #agency-bar {
    height: 56px;
  }
  

  .header nav {
    min-width: 75%;
  }

  .header .chin {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    width: 100%;
  }

  .header .chin>div {
    width: 37%;
  }

  .header .chin .status {
    align-items: flex-start;
    font-size: var(--body-font-size-xs);
  }

  .header .chin .search {
    align-items: flex-end;
  }

  .header nav ul {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-end;
    column-gap: 22px;
    width: 60vw;
    height: 46px;
    padding: 20px 0;
    font-size: var(--body-font-size-xs);
  }

  .header nav li {
    height: 15px;
  }

  .header nav>div>ul>li {
    flex-direction: row;
    border: 0;
    padding: 0;
  }

  .header nav ul ul.visible {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    position: absolute;
    top: 150px;
    right: 0;
    max-width: 1280px;
    min-height: 520px;
    row-gap: 16px;
    column-gap: 40px;
    padding-left: 100px;
    margin-left: auto;
    margin-right: auto;
    background: #fff;
    z-index: 100;
  }

  .header nav ul ul>li {
    position: relative;
    display: grid;
    grid-template-columns: 32px 1fr;
    justify-self: flex-start;
    grid-template-areas:
      "icon link"
      "icon text";
    width: 300px;
    min-height: 50px;
    background-color: #fff;
  }

  .header nav ul ul>li img {
    grid-area: icon;
    margin: 0;
  }

  .header nav ul ul>li a {
    grid-area: link;
    margin-top: 0;
    padding-left: 10px;
  }

  .header nav ul ul>li p {
    display: inline-block;
    grid-area: text;
    padding-left: 10px;
    width: 100%;
  }

  .header nav li a.expander {
    padding-right: 15px;
  }

  .header nav li a.expander::after {
    font-family: ETmodules, arial;
    content: "3";
    font-size: 16px;
    position: absolute;
    right: 10px;
    top: 0;
    font-weight: 800;
  }

  .header nav .hamburger {
    display: none;
  }
}

